horizontal scroll fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9790,8 +9790,8 @@ div.bottom_cnt div.alert_message {
   div.bottom_cnt div#apartments_advertised_cnt {
     width: 100%;
     margin-top: 25px;
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   div.bottom_cnt div#apartments_advertised_cnt a.thumbnail.apartment_card {
