--- a/resources/assets/sass/publicViews/_welcome.scss
+++ b/resources/assets/sass/publicViews/_welcome.scss
@@ -436,8 +436,8 @@ div.bottom_cnt {
             
             width: 100%; 
             margin-top: 25px;
-            margin-left: 10px;
-            margin-right: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
         
             a.thumbnail.apartment_card {
                     
